--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,32 @@
 {
-    "name": "kartik-v/yii2-slider",
-    "description": "An advanced slider input for Yii Framework 2 for both touch enabled and desktop devices based on bootstrap-slider.",
-    "keywords": ["yii2", "extension", "widget", "slider", "range", "bootstrap", "bootstrap 3"],
-    "homepage": "https://github.com/kartik-v/yii2-slider",
-    "type": "yii2-extension",
-    "license": "BSD 3-Clause",
-    "authors": [
-        {
-            "name": "Kartik Visweswaran",
-            "email": "kartikv2@gmail.com",
-            "homepage": "http://www.krajee.com/"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "kartik-v/yii2-krajee-base": "*"
-    },
-    "autoload": {
-        "psr-4": {
-            "kartik\\slider\\": ""
-        }
+  "name": "kartik-v/yii2-slider",
+  "description": "An advanced slider input for Yii Framework 2 for both touch enabled and desktop devices based on bootstrap-slider.",
+  "keywords": [
+    "yii2",
+    "extension",
+    "widget",
+    "slider",
+    "range",
+    "bootstrap",
+    "bootstrap 3"
+  ],
+  "homepage": "https://github.com/kartik-v/yii2-slider",
+  "type": "yii2-extension",
+  "license": "BSD 3-Clause",
+  "authors": [
+    {
+      "name": "Kartik Visweswaran",
+      "email": "kartikv2@gmail.com",
+      "homepage": "http://www.krajee.com/"
     }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "kartik-v/yii2-krajee-base": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "kartik\\slider\\": ""
+    }
+  }
 }
