--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,32 @@
 {
-  "name": "kartik-v/yii2-slider",
-  "description": "An advanced slider input for Yii Framework 2 for both touch enabled and desktop devices based on bootstrap-slider.",
-  "keywords": [
-    "yii2",
-    "extension",
-    "widget",
-    "slider",
-    "range",
-    "bootstrap",
-    "bootstrap 3"
-  ],
-  "homepage": "https://github.com/kartik-v/yii2-slider",
-  "type": "yii2-extension",
-  "license": "BSD-3-Clause",
-  "authors": [
-    {
-      "name": "Kartik Visweswaran",
-      "email": "kartikv2@gmail.com",
-      "homepage": "http://www.krajee.com/"
+    "name": "kartik-v/yii2-slider",
+    "description": "An advanced slider input for Yii Framework 2 for both touch enabled and desktop devices based on bootstrap-slider.",
+    "keywords": [
+        "yii2",
+        "extension",
+        "widget",
+        "slider",
+        "range",
+        "bootstrap",
+        "bootstrap 3",
+        "bootstrap 4"
+    ],
+    "homepage": "https://github.com/kartik-v/yii2-slider",
+    "type": "yii2-extension",
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "Kartik Visweswaran",
+            "email": "kartikv2@gmail.com",
+            "homepage": "http://www.krajee.com/"
+        }
+    ],
+    "require": {
+        "kartik-v/yii2-krajee-base": ">=1.9.8"
+    },
+    "autoload": {
+        "psr-4": {
+            "kartik\\slider\\": "src"
+        }
     }
-  ],
-  "minimum-stability": "dev",
-  "require": {
-    "kartik-v/yii2-krajee-base": "*"
-  },
-  "autoload": {
-    "psr-4": {
-      "kartik\\slider\\": ""
-    }
-  }
 }
